BOAC-2309: Fixes row spacing on class list course sites

--- a/src/assets/styles/boac-global.css
+++ b/src/assets/styles/boac-global.css
@@ -31,6 +31,10 @@
   height: 100%;
   font-size: 14px;
 }
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
 .flex-container {
   display: flex;
   list-style: none;
